<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manual_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.CookbookManualFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/manual_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/manual_nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/manual_adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
                ads:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/manual_content_label"
                style="@style/HeadingTextView"
                android:text="@string/content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manual_adView" />

            <Button
                android:id="@+id/manual_add_content_button"
                style="@style/AppButton"
                android:text="@string/add_button_text"
                app:icon="@drawable/ic_add_24px"
                app:layout_constraintTop_toTopOf="@id/manual_content_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/manual_content_label" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/manual_content_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintBottom_toTopOf="@id/manual_ingredient_label"
                app:layout_constraintTop_toBottomOf="@id/manual_content_label"
                tools:context="com.larsonapps.personalcookbook.ContentFragment" />

            <TextView
                android:id="@+id/manual_cook_note_label"
                style="@style/HeadingTextView"
                android:text="@string/cook_notes_label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manual_content_container" />

            <Button
                android:id="@+id/manual_add_cook_note_button"
                style="@style/AppButton"
                android:text="@string/add_button_text"
                app:icon="@drawable/ic_add_24px"
                app:layout_constraintTop_toTopOf="@id/manual_cook_note_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/manual_cook_note_label" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/manual_cook_note_list_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintBottom_toTopOf="@id/manual_ingredient_label"
                app:layout_constraintTop_toBottomOf="@id/manual_cook_note_label"
                tools:context="com.larsonapps.personalcookbook.CookNoteFragment" />

            <TextView
                android:id="@+id/manual_ingredient_label"
                style="@style/HeadingTextView"
                android:text="@string/ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manual_cook_note_list_container" />

            <Button
                android:id="@+id/manual_add_ingredient_button"
                style="@style/AppButton"
                android:text="@string/add_button_text"
                app:icon="@drawable/ic_add_24px"
                app:layout_constraintTop_toTopOf="@id/manual_ingredient_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/manual_ingredient_label" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/manual_ingredient_list_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintBottom_toTopOf="@id/manual_step_label"
                app:layout_constraintTop_toBottomOf="@id/manual_ingredient_label"
                tools:context="com.larsonapps.personalcookbook.IngredientFragment" />

            <TextView
                android:id="@+id/manual_step_label"
                style="@style/HeadingTextView"
                android:text="@string/steps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manual_ingredient_list_container" />

            <Button
                android:id="@+id/manual_add_step_button"
                style="@style/AppButton"
                android:text="@string/add_button_text"
                app:icon="@drawable/ic_add_24px"
                app:layout_constraintTop_toTopOf="@id/manual_step_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/manual_step_label" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/manual_step_list_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintBottom_toTopOf="@id/manual_image_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manual_step_label"
                tools:context="com.larsonapps.personalcookbook.StepFragment" />

            <TextView
                android:id="@+id/manual_image_label"
                style="@style/HeadingTextView"
                android:text="@string/images"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manual_step_list_container" />

            <Button
                android:id="@+id/manual_add_image_gallery_button"
                style="@style/AppButton"
                android:text="@string/add_gallery"
                app:icon="@drawable/ic_add_24px"
                app:layout_constraintTop_toTopOf="@id/manual_image_label"
                app:layout_constraintStart_toEndOf="@id/manual_image_label"
                app:layout_constraintEnd_toStartOf="@id/manual_add_image_internet_button"
                app:layout_constraintBottom_toBottomOf="@id/manual_image_label" />

            <Button
                android:id="@+id/manual_add_image_internet_button"
                style="@style/AppButton"
                android:text="@string/add_internet"
                app:icon="@drawable/ic_add_24px"
                app:layout_constraintTop_toTopOf="@id/manual_image_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/manual_image_label" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/manual_image_list_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintBottom_toTopOf="@id/manual_keyword_label"
                app:layout_constraintTop_toBottomOf="@id/manual_image_label"
                tools:context="com.larsonapps.personalcookbook.ImageFragment" />

            <TextView
                android:id="@+id/manual_keyword_label"
                style="@style/HeadingTextView"
                android:text="@string/keywords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manual_image_list_container" />

            <Button
                android:id="@+id/manual_add_keyword_button"
                style="@style/AppButton"
                android:text="@string/add_button_text"
                app:icon="@drawable/ic_add_24px"
                app:layout_constraintTop_toTopOf="@id/manual_keyword_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/manual_keyword_label" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/manual_keyword_list_container"
                android:layout_width="match_parent"
                style="@style/AppFragmentContainer"
                app:layout_constraintBottom_toTopOf="@id/manual_submit_button"
                app:layout_constraintTop_toBottomOf="@id/manual_keyword_label"
                tools:context="com.larsonapps.personalcookbook.KeywordFragment" />

           <Button
                android:id="@+id/manual_submit_button"
                style="@style/AppButton"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>