<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:id="@+id/edit_cook_note_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:hint="@string/edit_number_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/edit_cook_note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:hint="@string/edit_cook_note_edit_text_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/edit_cook_note_submit_button"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />
</LinearLayout>