...
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/edit_content_short_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:hint="@string/edit_content_short_description_hint"
...
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/edit_content_submit_button"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />
</LinearLayout>
