...
                style="@style/HeadingTextView"
                android:text="@string/content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_adView" />

            <Button
                android:id="@+id/edit_content_button"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                app:icon="@drawable/ic_edit_24px"
                app:layout_constraintTop_toTopOf="@id/edit_content_label"
...
                style="@style/HeadingTextView"
                android:text="@string/cook_notes_label_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_content_container" />

            <Button
                android:id="@+id/edit_add_cook_note_button"
                style="@style/AppButton"
                android:text="@string/add_button_text"
                app:icon="@drawable/ic_add_24px"
                app:layout_constraintTop_toTopOf="@id/edit_cook_note_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/edit_cook_note_label" />
...
