...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cook_note_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/list_horizontal_text_margin"
                android:layout_marginTop="@dimen/list_top_text_margin"
                android:layout_marginEnd="@dimen/list_horizontal_text_margin"
                style="@style/ListItemHeadingStyle"
...
